FB-1 Pagable